@@ -13,6 +13,8 @@ Version 0.6
 
 Not yet released.
 
+- Added support for accessing model instances via arbitrary primary keys,
+  instead of requiring an integer column named ``id``.
 - Added support for pagination of responses.
 - Fixed issue due to symbolic link from :file:`README` to :file:`README.md`
   when running ``pip bundle foobar Flask-Restless``.
